--- a/src/app/component/header-component/header-component.component.html
+++ b/src/app/component/header-component/header-component.component.html
@@ -7,19 +7,19 @@
       <div class="collapse navbar-collapse gti-head-link" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" routerLink="/about">News</a>
+            <a class="nav-link active" aria-current="page" routerLink="/news">News</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" routerLink="#">Get Best Offers</a>
+            <a class="nav-link" routerLink="/get-best-offer">Get Best Offers</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" routerLink="#">Defaulter </a>
+            <a class="nav-link" routerLink="/defaulter">Defaulter </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" routerLink="#">Job Junction</a>
+            <a class="nav-link" routerLink="/job-junction">Job Junction</a>
           </li>
           <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" routerLink="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+            <a class="nav-link dropdown-toggle" routerLink="/true-find" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                 TrueFind
             </a>
             <ul class="dropdown-menu">
@@ -28,7 +28,7 @@
             </ul>
           </li>
           <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" routerLink="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+            <a class="nav-link dropdown-toggle" routerLink="/tools" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                 Tools
             </a>
             <ul class="dropdown-menu">
@@ -37,7 +37,7 @@
             </ul>
           </li>
           <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" routerLink="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+            <a class="nav-link dropdown-toggle" routerLink="/gti" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                 GTI
             </a>
             <ul class="dropdown-menu">
@@ -46,7 +46,7 @@
             </ul>
           </li>
           <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" routerLink="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+            <a class="nav-link dropdown-toggle" routerLink="/follow-us" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                 Follow Us
             </a>
             <ul class="dropdown-menu">
@@ -58,7 +58,7 @@
             <a class="nav-link" routerLink="#"><i class="fas fa-search"></i> </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" routerLink="#"><i class="far fa-bell"></i></a>
+            <a class="nav-link" routerLink="/notification"><i class="far fa-bell"></i></a>
           </li>
 
         </ul>
