--- a/src/app/component/header-component/header-component.component.html
+++ b/src/app/component/header-component/header-component.component.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg navbar-dark gti-head-link-ban">
     <div class="container">
-      <a class="navbar-brand fw-bold" routerLink="/"><img src="https://gujarattilesinfo.com/assets/img/logo.png"></a>
+      <a class="navbar-brand fw-bold" routerLink="" (click)="homeLogo()" ><img src="https://gujarattilesinfo.com/assets/img/logo.png"></a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -45,7 +45,10 @@
                 <li><a class="dropdown-item" routerLink="#">Another action</a></li>
             </ul>
           </li>
-          <li class="nav-item dropdown">
+          <li class="nav-item">
+            <a class="nav-link" routerLink="" (click)="logout()">Log Out</a>
+          </li>
+          <!-- <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" routerLink="/follow-us" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                 Follow Us
             </a>
@@ -53,7 +56,7 @@
                 <li><a class="dropdown-item" routerLink="#">Action</a></li>
                 <li><a class="dropdown-item" routerLink="#">Another action</a></li>
             </ul>
-          </li>
+          </li> -->
           <li class="nav-item">
             <a class="nav-link" routerLink="#"><i class="fas fa-search"></i> </a>
           </li>
