--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,6 @@
-<app-header-component></app-header-component>
+<!-- <app-header-component *ngIf="login()"></app-header-component>
 <router-outlet></router-outlet>
-<app-footer-component></app-footer-component>
+<app-footer-component *ngIf="login()"></app-footer-component> -->
+<app-header-component *ngIf="showHead"></app-header-component>
+<router-outlet></router-outlet>
+<app-footer-component *ngIf="showHead"></app-footer-component>
