--- a/src/app/component/login/login.component.html
+++ b/src/app/component/login/login.component.html
@@ -1,19 +1,37 @@
-<div class="container d-flex justify-content-center">       
-    <form class="w-50 m-5 bg-secondary p-5 rounded text-white ">
-        <h3 class="text-center fw-bold fs-4 my-3">Login Form</h3>
+<div class="container d-flex justify-content-center dt-bg-frm-cnt">       
+    <form  class="m-5  rounded text-white dt-bg-frm">
+        <img src="https://gujarattilesinfo.com/assets/img/logo.png" alt="" class="img-fluid d-flex justify-self-center align-center">
+        <h3 class="text-center fw-bold fs-4 my-3 mb-1">Login Form</h3>
+        <p class="text-center mb-5">Please Enter Validate Number For OTP Verification</p>
         <div class="mb-3">
-          <label for="exampleInputEmail1" class="form-label">Email address</label>
-          <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
-          <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
+          <label for="username" class="form-label">Email address</label>
+          <input type="email" class="form-control" [(ngModel)]="username" name="name" />
         </div>
         <div class="mb-3">
-          <label for="exampleInputPassword1" class="form-label">Password</label>
-          <input type="password" class="form-control" id="exampleInputPassword1">
+          <label for="password" class="form-label">Password</label>
+          <input type="password" class="form-control"   [(ngModel)]="password " name="pass"  />
         </div>
         <!-- <div class="mb-3 form-check">
           <input type="checkbox" class="form-check-input" id="exampleCheck1">
           <label class="form-check-label" for="exampleCheck1">Check me out</label>
         </div> -->
-        <button type="submit" class="btn btn-primary">Login</button>
+        <div class="error">{{errorMsg}}</div>
+        <button type="submit" class="btn btn-primary" (click)="login()">Login</button>
     </form>
 </div>
+<!-- <div class="container d-flex justify-content-center">       
+  <form (ngSubmit)="login()" [formGroup]='credentials' class="m-5  rounded text-white dt-bg-frm">
+      <img src="https://gujarattilesinfo.com/assets/img/logo.png" alt="" class="img-fluid d-flex justify-self-center align-center">
+      <h3 class="text-center fw-bold fs-4 my-3">Login Form</h3>
+      <div class="mb-3">
+        <label for="username" class="form-label">Email address</label>
+        <input type="email" class="form-control" formControlName="email"  name="name" required />
+      </div>
+      <div class="mb-3">
+        <label for="password" class="form-label">Password</label>
+        <input type="password" class="form-control" formControlName="password" name="pass"  />
+      </div>
+      <div class="error">{{errorMsg}}</div>
+      <button type="submit" class="btn btn-primary" (click)="login()">Login</button>
+  </form>
+</div> -->
